{
    "vouchers": "Vouchers",
    "edit": "Edit",
    "close": "Close",
    "copiedToClipboard": "Copied to clipboard",
    "areYouSure": "Are you sure?",
    "confirmRemoveVoucher": "That you want to remove this voucher?",
    "cancel": "Cancel",
    "remove": "Remove",
    "howMuchSpend": "How much did you spend?",
    "amount": "Amount",
    "ok": "OK",
    "addVoucher": "Add voucher",
    "editVoucher": "Edit voucher",
    "create": "Create",
    "update": "Update",
    "scanBarcode": "Scan barcode",
    "description": "Description",
    "code": "Code",
    "expires": "Expires",
    "removeOnceExpired": "Remove once expired",
    "balance": "Balance",
    "notes": "Notes",
    "import": "Import",
    "export": "Export",
    "appLock": "App lock",
    "smartScan": "Smart scan"
}
