...
          SizedBox(height: AppTheme.space4),
          Row(
            mainAxisAlignment: MainAxisAlignment.end,
            children: [
              if (voucher.balanceOption.isSome())
                IconButton(
                  key: const ValueKey('SpendIconButton'),
                  icon: const Icon(Icons.shopping_cart),
                  onPressed: onSpend,
                  color: theme.colorScheme.onPrimary,
                ),
              IconButton(
                icon: const Icon(Icons.delete),
...
